sfdx-source/force-app/main/default/objects/Contract/fields/Associated_Account_Ids__c.field-meta.xml
<CustomField>
    <fullName>Associated_Account_Ids__c</fullName>
    <description>LEM-779 Accounts Associated to this Contract</description>
    <label>Associated Account Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>