sfdx-source/force-app/main/default/objects/Contract/fields/Business_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Account_Name__c</fullName>
    <description>LEM-14235: It is used to show business account name for slack notifications.</description>
    <formula>Account.Name</formula>
    <label>Business Account Name</label>
    <type>Text</type>
</CustomField>