sfdx-source/force-app/main/default/objects/Contract/fields/Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>Contract_Name__c</fullName>
    <description>LEM-3619: Value: Display only the first two Brands that are related iwith some kind of indicator that there are more. Like (Pizza Hut, Wingstreet, etc...)</description>
    <label>Contract Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>