sfdx-source/force-app/main/default/objects/Contract/fields/Contract_Number_Link__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number_Link__c</fullName>
    <description>LEM-2516: It is used to display Contract record link in onboarding details on work plan of Drive type.</description>
    <formula>HYPERLINK(&apos;/&apos; + Id,  ContractNumber, &apos;_self&apos;)</formula>
    <label>Contract Number</label>
    <type>Text</type>
</CustomField>