sfdx-source/force-app/main/default/objects/Contract/fields/Contract_Split_Category__c.field-meta.xml
<CustomField>
    <fullName>Contract_Split_Category__c</fullName>
    <description>LEM-14235: It shows the type of contract based on the products added.</description>
    <formula>TEXT(SBQQ__Order__r.Type)</formula>
    <label>Contract Type</label>
    <type>Text</type>
</CustomField>