sfdx-source/force-app/main/default/objects/Contract/fields/Drive_Auto_Activation_Supported__c.field-meta.xml
<CustomField>
    <fullName>Drive_Auto_Activation_Supported__c</fullName>
    <description>Description: LEM-2610: Identify if a Drive Products on a Contract are eligible to be auto-activated</description>
    <formula>TEXT(SBQQ__Order__r.Drive_Auto_Activation_Supported__c)</formula>
    <label>Drive Auto-Activation Supported?</label>
    <type>Text</type>
</CustomField>