sfdx-source/force-app/main/default/objects/Contract/fields/Drive_Nintex_Id__c.field-meta.xml
<CustomField>
    <fullName>Drive_Nintex_Id__c</fullName>
    <description>LEM-17162: It indicates "Drive Nintex Id" value captured on the associated Quote.</description>
    <formula>SBQQ__Quote__r.Drive_Nintex_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Drive Nintex Id</label>
    <type>Text</type>
</CustomField>