sfdx-source/force-app/main/default/objects/Contract/fields/Failed_Account_Names__c.field-meta.xml
<CustomField>
    <fullName>Failed_Account_Names__c</fullName>
    <description>LEM-16146: It is used to store account names.</description>
    <label>Failed Account Names</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>