sfdx-source/force-app/main/default/objects/Contract/fields/Franchise_Enrollment_Process__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Enrollment_Process__c</fullName>
    <description>https://doordash.atlassian.net/browse/LEM-5316</description>
    <formula>TEXT(SBQQ__Order__r.Opt_In_Opt_Out_Decision__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Franchise Enrollment Process</label>
    <type>Text</type>
</CustomField>