sfdx-source/force-app/main/default/objects/Contract/fields/Franchise_Supplemental_Agreement_URL__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Supplemental_Agreement_URL__c</fullName>
    <description>LEM-2771: URL for Franchise Supplemental Agreement</description>
    <inlineHelpText>Please do not populate this field manually. Navigate to ‘Upload MSA &amp; FSA’ section under ‘Related’ tab and upload the files, this field will automatically get updated with the Public URL.</inlineHelpText>
    <label>Franchise Supplemental Agreement URL</label>
    <type>Url</type>
</CustomField>