sfdx-source/force-app/main/default/objects/Contract/fields/Has_Store_Count_Changed_On_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Has_Store_Count_Changed_On_Amendment__c</fullName>
    <description>LEM-17563: It is used to compare the number of stores on latest amended quote vs. the original quote.</description>
    <formula>(SBQQ__Order__r.SBQQ__Quote__r.Number_of_Stores__c &gt; SBQQ__Quote__r.Number_of_Stores__c)</formula>
    <label>Has Store Count Changed On Amendment?</label>
    <type>Checkbox</type>
</CustomField>