sfdx-source/force-app/main/default/objects/Contract/fields/Integration_Source__c.field-meta.xml
<CustomField>
    <fullName>Integration_Source__c</fullName>
    <description>LEM-14648: It is used to capture the source from inbound ingestion payload.</description>
    <formula>If(
  NOT(ISBLANK(TEXT(SBQQ__Order__r.SBQQ__Quote__r.Integration_Source__c))),
  TEXT(SBQQ__Order__r.SBQQ__Quote__r.Integration_Source__c),
  SBQQ__Order__r.SBQQ__Quote__r.Opportunity_Source__c
)</formula>
    <label>Integration Source</label>
    <type>Text</type>
</CustomField>