sfdx-source/force-app/main/default/objects/Contract/fields/Invoicing_Payment_Account__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Payment_Account__c</fullName>
    <description>LEM-2361: Allow user to set payment terms on Quote</description>
    <formula>SBQQ__Order__r.Invoicing_Payment_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoicing Payment Account</label>
    <type>Text</type>
</CustomField>