sfdx-source/force-app/main/default/objects/Contract/fields/Is_Churned_Mx_Contract_Processed__c.field-meta.xml
<CustomField>
    <fullName>Is_Churned_Mx_Contract_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-23780: It indicates that the batch has successfully processed the Churned Mx cleanup.</description>
    <label>Is Churned Mx Contract Processed?</label>
    <type>Checkbox</type>
</CustomField>