sfdx-source/force-app/main/default/objects/Contract/fields/Is_Contract_Amended__c.field-meta.xml
<CustomField>
    <fullName>Is_Contract_Amended__c</fullName>
    <description>LEM-16705: The field is used to validate if the contract has been amended or not.</description>
    <formula>(SBQQ__Order__r.SBQQ__Quote__r.Id &lt;&gt; SBQQ__Quote__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Contract Amended</label>
    <type>Checkbox</type>
</CustomField>