sfdx-source/force-app/main/default/objects/Contract/fields/Is_This_Ads_Or_Promo__c.field-meta.xml
<CustomField>
    <fullName>Is_This_Ads_Or_Promo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is This Ads Or Promo</label>
    <type>Checkbox</type>
</CustomField>