sfdx-source/force-app/main/default/objects/Contract/fields/Legacy_Contract_URLs__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Contract_URLs__c</fullName>
    <description>LEM-2773: Data Migration - new field and updates to existing fields</description>
    <label>Legacy Contract URLs</label>
    <length>950</length>
    <type>LongTextArea</type>
</CustomField>