sfdx-source/force-app/main/default/objects/Contract/fields/Master_Supplemental_Agreement_URL__c.field-meta.xml
<CustomField>
    <fullName>Master_Supplemental_Agreement_URL__c</fullName>
    <description>LEM-2771: URL for Master Supplemental Agreement</description>
    <inlineHelpText>Please do not populate this field manually. Navigate to ‘Upload MSA &amp; FSA’ section under ‘Related’ tab and upload the files, this field will automatically get updated with the Public URL.</inlineHelpText>
    <label>Master Service Agreement URL</label>
    <type>Url</type>
</CustomField>