sfdx-source/force-app/main/default/objects/Contract/fields/MP_Bz_Id__c.field-meta.xml
<CustomField>
    <fullName>MP_Bz_Id__c</fullName>
    <description>LEM-9549: It indicates the marketplace business Name/Id.</description>
    <inlineHelpText>This field indicates the ID that will be used for Drive Withholding.
    For existing franchises switching from Invoicing to Withholding, this will be Business Group ID.
    For new businesses onboarding to Withholding, this will be the Marketplace Business ID.</inlineHelpText>
    <label>MP Bz Id</label>
    <type>TextArea</type>
</CustomField>