sfdx-source/force-app/main/default/objects/Contract/fields/Nintex_Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Nintex_Use_Case__c</fullName>
    <description>LEM-17162: It indicates "Nintex Use Case" value captured on the associated Quote.</description>
    <formula>TEXT(SBQQ__Quote__r.Nintex_Use_Case__c)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Nintex Use Case</label>
    <type>Text</type>
</CustomField>