sfdx-source/force-app/main/default/objects/Contract/fields/Number_of_Stores__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Stores__c</fullName>
    <description>LEM-14946: It indicates the 'Number of Stores' populated on it's associated Quote.</description>
    <formula>SBQQ__Quote__r.Number_of_Stores__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Stores</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>