sfdx-source/force-app/main/default/objects/Contract/fields/Pactsafe_Activity_Id__c.field-meta.xml
<CustomField>
    <fullName>Pactsafe_Activity_Id__c</fullName>
    <description>LEM-16826 Contains the Activity Id from within a Pactsafe link</description>
    <formula>IF(
  !(ISBLANK(SBQQ__Quote__r.Signed_Contract_link__c)) &amp;&amp;
  CONTAINS(SBQQ__Quote__r.Signed_Contract_link__c ,&apos;pactsafe&apos;)
 ,MID(
   SBQQ__Quote__r.Signed_Contract_link__c,
   FIND(&quot;/activity/&quot;, SBQQ__Quote__r.Signed_Contract_link__c) + 10,
   FIND(&quot;/record&quot;, SBQQ__Quote__r.Signed_Contract_link__c)-
   FIND(&quot;/activity/&quot;,SBQQ__Quote__r.Signed_Contract_link__c) - 10)
 ,null
)</formula>
    <inlineHelpText>Contains the Activity Id from within a Pactsafe link (SSMO uses Pactsafe)</inlineHelpText>
    <label>Pactsafe Activity Id</label>
    <type>Text</type>
</CustomField>