sfdx-source/force-app/main/default/objects/Contract/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <formula>TEXT(SBQQ__Order__r.Payment_Method__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Method</label>
    <type>Text</type>
</CustomField>