sfdx-source/force-app/main/default/objects/Contract/fields/Pricing_Summary_URL__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Summary_URL__c</fullName>
    <description>LEM-2771: URL for Pricing Sheet/Pricing Summary</description>
    <label>Pricing Summary URL</label>
    <type>Url</type>
</CustomField>