sfdx-source/force-app/main/default/objects/Contract/fields/Pricing_Variation_Type__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Variation_Type__c</fullName>
    <description>LEM-19578: Indicates if users can create amendment quotes.</description>
    <label>Pricing Variation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Explainable</fullName>
            </value>
            <value>
                <fullName>Unexplainable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>