sfdx-source/force-app/main/default/objects/Contract/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>LEM-24915: New field to determine the product families associated with the Contract</description>
    <label>Product Family</label>
    <length>50</length>
    <type>Text</type>
</CustomField>