sfdx-source/force-app/main/default/objects/Contract/fields/RESSMO_Eligible__c.field-meta.xml
<CustomField>
    <fullName>RESSMO_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-16826 - Defines contract is ressmo eligible or not</description>
    <label>RESSMO Eligible</label>
    <type>Checkbox</type>
</CustomField>