sfdx-source/force-app/main/default/objects/Contract/fields/RESSMO_Sales_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>RESSMO_Sales_Rep_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-23354 Stores current user who initiates RESSMO Onboarding</description>
    <label>RESSMO Sales Rep Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>