sfdx-source/force-app/main/default/objects/Contract/fields/RESSMO_Store_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>RESSMO_Store_Account_Id__c</fullName>
    <description>LEM-16826: New Store existing Business (NSE) - Screen (UI)</description>
    <label>RESSMO Store Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>