sfdx-source/force-app/main/default/objects/Contract/fields/SSMO_Validation__c.field-meta.xml
<CustomField>
    <fullName>SSMO_Validation__c</fullName>
    <label>SSMO Validation</label>
    <type>TextArea</type>
</CustomField>