sfdx-source/force-app/main/default/objects/Contract/fields/Store_Id__c.field-meta.xml
<CustomField>
    <fullName>Store_Id__c</fullName>
    <description>LEM-25021: It is used to capture the inbound ingestion store id to which the Contract is associated.</description>
    <formula>SBQQ__Opportunity__r.Store_Id__c</formula>
    <label>Store Id</label>
    <type>Text</type>
</CustomField>