sfdx-source/force-app/main/default/objects/Contract/fields/Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_Identifier__c</fullName>
    <description>LEM-14588: It is used to capture the unique identifier from SSMO payload.</description>
    <formula>SBQQ__Quote__r.Unique_Identifier__c</formula>
    <label>Unique Identifier</label>
    <type>Text</type>
</CustomField>