sfdx-source/force-app/main/default/objects/Contract/fields/Universal_Supplemental_Agreement_URL__c.field-meta.xml
<CustomField>
    <fullName>Universal_Supplemental_Agreement_URL__c</fullName>
    <description>LEM-2771: URL for Universal Supplemental Agreement</description>
    <label>Universal Supplemental Agreement URL</label>
    <type>Url</type>
</CustomField>